--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="./javascripts/main.js"></script>
-    <title>Coffeegen</title>
+    <title>Graph Paper Islands</title>
   </head>
 
   <body>
