Updated for CityBlocksJs

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 </a>Not Quite a Header
         </h3>
         <p>This is a place for my stuff. Maybe you'll like something here.</p>
+        <a href="https://cgibbs.github.io/CityBlocksJs/">
+          <img src="images/cityBlocks.png" alt="CityBlocks" style="float:right;width:240px;height:240px;">
+        </a>
         <a href="https://cgibbs.github.io/markovjs/">
           <img src="images/markov.png" alt="markov.js" style="float:left;width:240px;height:240px;">
         </a>
@@ -39,9 +42,6 @@
         </a>
         <a href="https://cgibbs.github.io/CoffeeGen/">
           <img src="images/coffee.jpg" alt="CoffeeGen" style="float:left;width:240px;height:240px;">
-        </a>
-        <a href="https://github.com/cgibbs/CityBlocks">
-          <img src="images/cityBlocks.png" alt="CityBlocks" style="float:right;width:240px;height:240px;">
         </a>
         <a href="https://github.com/cgibbs/StegoRogue">
           <img src="images/stegorogue.png" alt="CoffeeGen" style="float:left;width:240px;height:240px;">
