Removed CGOL, added GlyphGenJs

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="./javascripts/main.js"></script>
     <title>Graph Paper Islands</title>
   </head>
 
@@ -32,7 +31,10 @@
         </h3>
         <p>This is a place for my stuff. Maybe you'll like something here.</p>
         <a href="https://cgibbs.github.io/CityBlocksJs/">
-          <img src="images/cityBlocks.png" alt="CityBlocks" style="float:right;width:240px;height:240px;">
+          <img src="images/cityBlocks.png" alt="CityBlocksJs" style="float:left;width:240px;height:240px;">
+        </a>
+        <a href="https://cgibbs.github.io/GlyphGenJs/">
+          <img src="images/glyph.png" alt="GlyphGenJs" style="float:right;width:240px;height:240px;">
         </a>
         <a href="https://cgibbs.github.io/markovjs/">
           <img src="images/markov.png" alt="markov.js" style="float:left;width:240px;height:240px;">
@@ -44,10 +46,7 @@
           <img src="images/coffee.jpg" alt="CoffeeGen" style="float:left;width:240px;height:240px;">
         </a>
         <a href="https://github.com/cgibbs/StegoRogue">
-          <img src="images/stegorogue.png" alt="CoffeeGen" style="float:left;width:240px;height:240px;">
-        </a>
-        <a href="https://github.com/cgibbs/py_cgol">
-          <img src="images/cgol.png" alt="CoffeeGen" style="float:right;width:240px;height:240px;">
+          <img src="images/stegorogue.png" alt="CoffeeGen" style="float:right;width:240px;height:240px;">
         </a>
         <div style="clear: both"></div>
 
