--- a/index.html
+++ b/index.html
@@ -27,26 +27,29 @@
         <h3>
 <a id="coffeegen" class="anchor" href="#coffeegen" aria-hidden="true">
   <span aria-hidden="true" class="octicon octicon-link"></span>
-</a>Not Quite a Header
+</a>Self-Aware Header
         </h3>
-        <p>This is a place for my stuff. Maybe you'll like something here.</p>
+        <p>This is a place for my stuff. Check it all out.</p>
+        <a href="https://cgibbs.github.io/react-sequencer/">
+          <img src="images/react-sequencer.png" alt="react-sequencer" style="float:left;width:240px;height:240px;">
+        </a>
         <a href="https://cgibbs.github.io/CityBlocksJs/">
-          <img src="images/cityBlocks.png" alt="CityBlocksJs" style="float:left;width:240px;height:240px;">
+          <img src="images/cityBlocks.png" alt="CityBlocksJs" style="float:right;width:240px;height:240px;">
         </a>
         <a href="https://cgibbs.github.io/GlyphGenJs/">
-          <img src="images/glyph.png" alt="GlyphGenJs" style="float:right;width:240px;height:240px;">
+          <img src="images/glyph.png" alt="GlyphGenJs" style="float:left;width:240px;height:240px;">
         </a>
         <a href="https://cgibbs.github.io/markovjs/">
-          <img src="images/markov.png" alt="markov.js" style="float:left;width:240px;height:240px;">
+          <img src="images/markov.png" alt="markov.js" style="float:right;width:240px;height:240px;">
         </a>
         <a href="https://cgibbs.github.io/Pliny.js/">
-          <img src="images/plinyelder.jpg" alt="Pliny.js" style="float:right;width:240px;height:240px;">
+          <img src="images/plinyelder.jpg" alt="Pliny.js" style="float:left;width:240px;height:240px;">
         </a>
         <a href="https://cgibbs.github.io/CoffeeGen/">
-          <img src="images/coffee.jpg" alt="CoffeeGen" style="float:left;width:240px;height:240px;">
+          <img src="images/coffee.jpg" alt="CoffeeGen" style="float:right;width:240px;height:240px;">
         </a>
         <a href="https://github.com/cgibbs/StegoRogue">
-          <img src="images/stegorogue.png" alt="CoffeeGen" style="float:right;width:240px;height:240px;">
+          <img src="images/stegorogue.png" alt="CoffeeGen" style="float:left;width:240px;height:240px;">
         </a>
         <div style="clear: both"></div>
 
