--- a/index.html
+++ b/index.html
@@ -30,26 +30,29 @@
 </a>Self-Aware Header
         </h3>
         <p>This is a place for my stuff. Check it all out.</p>
+        <a href="https://cgibbs.github.io/darkroom_mod/index.html">
+          <img src="images/darkroom_mod.png" alt="darkroom_mod" style="float:left;width:240px;height:240px;">
+        </a>
         <a href="https://cgibbs.github.io/react-sequencer/">
-          <img src="images/react-sequencer.png" alt="react-sequencer" style="float:left;width:240px;height:240px;">
+          <img src="images/react-sequencer.png" alt="react-sequencer" style="float:right;width:240px;height:240px;">
         </a>
         <a href="https://cgibbs.github.io/CityBlocksJs/">
-          <img src="images/cityBlocks.png" alt="CityBlocksJs" style="float:right;width:240px;height:240px;">
-        </a>
-        <a href="https://cgibbs.github.io/GlyphGenJs/">
-          <img src="images/glyph.png" alt="GlyphGenJs" style="float:left;width:240px;height:240px;">
+          <img src="images/cityBlocks.png" alt="CityBlocksJs" style="float:left;width:240px;height:240px;">
         </a>
         <a href="https://cgibbs.github.io/markovjs/">
           <img src="images/markov.png" alt="markov.js" style="float:right;width:240px;height:240px;">
         </a>
+        <a href="https://cgibbs.github.io/GlyphGenJs/">
+          <img src="images/glyph.png" alt="GlyphGenJs" style="float:left;width:240px;height:240px;">
+        </a>
         <a href="https://cgibbs.github.io/Pliny.js/">
-          <img src="images/plinyelder.jpg" alt="Pliny.js" style="float:left;width:240px;height:240px;">
+          <img src="images/plinyelder.jpg" alt="Pliny.js" style="float:right;width:240px;height:240px;">
         </a>
         <a href="https://cgibbs.github.io/CoffeeGen/">
-          <img src="images/coffee.jpg" alt="CoffeeGen" style="float:right;width:240px;height:240px;">
+          <img src="images/coffee.jpg" alt="CoffeeGen" style="float:left;width:240px;height:240px;">
         </a>
         <a href="https://github.com/cgibbs/StegoRogue">
-          <img src="images/stegorogue.png" alt="CoffeeGen" style="float:left;width:240px;height:240px;">
+          <img src="images/stegorogue.png" alt="CoffeeGen" style="float:right;width:240px;height:240px;">
         </a>
         <div style="clear: both"></div>
 
